--- a/personnalisation.css
+++ b/personnalisation.css
@@ -57,9 +57,8 @@ body {
  	font-weight: 800;
  	font-size: 125px; 
  	color:white;
-	/*margin-left: 50px;
-	margin-bottom: 0px;*/
-	  margin: 0;
+	margin-left: 50px;
+	margin-bottom: 0px;
 
 }
 .nom{	
@@ -67,12 +66,12 @@ body {
  	font-weight: 500;
  	font-size: 34px; 
  	color:white; 
-	/*margin-left: 50px;
-	margin-top: 0px;*/
-	  margin: 0;
+	margin-left: 50px;
+	margin-top: 0px;
+
  }
 .fond_nom {
-	top: 80px; 
+	top: 70px;
 	position: absolute;
 	z-index: -1;
 
@@ -240,4 +239,19 @@ body {
 }
 .social_menu ul li:nth-child(3) a:hover { /*couleur transition Youtube*/
     background-color: #cd201f;
+}
+/*------------------------------------------------------ FOOTER -----------------------------------------------*/
+
+.by {
+	background-color: black;
+	height: 20px;
+	padding-top: 0px;
+	padding-bottom: 40px;
+}
+.by_text {
+	margin-top: 10px;
+	font-family: Roboto;
+	font-weight: bold;
+	text-align: center;
+	color: white;
 }
