--- a/flickity.css
+++ b/flickity.css
@@ -62,6 +62,7 @@ https://flickity.metafizzy.co
 
 .flickity-button:active {
   opacity: 0.6;
+  opacity: 0;
 }
 
 .flickity-button:disabled {
@@ -69,6 +70,7 @@ https://flickity.metafizzy.co
   cursor: auto;
   /* prevent disabled button from capturing pointer up event. #716 */
   pointer-events: none;
+  opacity: 0;
 }
 
 .flickity-button-icon {
@@ -105,7 +107,7 @@ https://flickity.metafizzy.co
   top: 20%;
   width: 60%;
   height: 60%;
-    opacity: 0;
+  opacity: 0;
 }
 
 /* ---- page dots ---- */
@@ -130,7 +132,7 @@ https://flickity.metafizzy.co
   width: 10px;
   height: 10px;
   margin: 0 8px;
-  background: #333;
+  background: white;
   border-radius: 50%;
   opacity: 0.25;
   cursor: pointer;
