--- a/css/style.css
+++ b/css/style.css
@@ -51,7 +51,7 @@ body {
  	color:lightgrey;
  }  
  #page_actuelle {
- 	 color:#F0F0F0;
+ 	 color:#DE6110;
  }
 /*----------------------------------------------------ACCUEIL--------------------------------------------------------------------*/
 .bande_accueil /*CASE*/
