--- a/css/flickity.css
+++ b/css/flickity.css
@@ -139,5 +139,6 @@ https://flickity.metafizzy.co
 }
 
 .flickity-page-dots .dot.is-selected {
-  opacity: 1;
+ background: #DE6110;
+ opacity: 1;
 }
