--- a/css/style.css
+++ b/css/style.css
@@ -29,8 +29,8 @@ body {
 	color: #F0F0F0;
 	font-family: Roboto; 
 	font-size: 150%;
-	margin-left: 5%;
-	margin-right: 5%
+	margin-left:5%;
+	margin-right:5%;
 	font-weight: bold;
 	text-align: justify;
 }
