--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@800&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=East+Sea+Dokdo&display=swap');
 
 /*----------------------------------------------------GÉNÉRAL--------------------------------------------------------------------*/
 
@@ -8,7 +9,7 @@ body {
 	margin: 0 auto;
 	background: repeat url(../RESSOURCES/fond.png);
 	background-size: 35%;
-	background-color: #0c0c0c;
+	background-color: #111111;
 }
 .fin_de_page { /*CASE*/
 	width: 100%; /*largeur en pourcentage de la fenêtre du navigateur*/
@@ -172,15 +173,69 @@ body {
 	margin-top: 20px;
 	margin-left: 10px;
  }
-/*----------------------------------------------------ACCUEIL--------------------------------------------------------------------*/
-.bande_photomontage /*CASE*/
+/*----------------------------------------------------BANDES--------------------------------------------------------------------*/
+ /*------------PRESENT--------------*/
+.present_bande {
+	display: flex;
+	margin: 0;
+	justify-content: center;
+	flex-direction: column;
+	align-items: center;
+	padding-top: 100px;
+}
+.present_case1 {
+	width: 100%;
+	margin: 0;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	margin-bottom: 175px;
+}
+.present_title {
+	font-family: Poppins;
+	font-size: 20px;
+	color: darkgrey;
+	font-weight: 600;
+	margin: 0;
+}
+.present_big {
+	font-family: East Sea Dokdo;
+	font-size: 180px;
+	color: darkgrey;
+	font-weight: 500;
+	margin: 0;
+	position:absolute;
+	top: 150px;
+}
+.present_text {
+	font-family: Poppins;
+	font-size: 16px;
+	color: darkgrey;
+	font-weight: 600;
+	margin: 0;
+}
+.present_date {
+	font-family: Poppins;
+	font-size: 16px;
+	color:#DE6110;
+	font-weight: 600;
+	margin: 0;
+	opacity: 0.8;
+}
+.scroll_down {
+	width:1.75%;
+	margin: 0;
+	margin-top: 270px;
+}
+ /*------------PHOTOMONTAGE--------------*/
+.photomontage_bande /*CASE*/
  {
 	display: flex;
 	margin: 0;
 	justify-content: center;
 	flex-direction: column;
 	align-items: center;
-	padding-top: 200px;
+	padding-top: 300px;
  }
  .lien_image {
 	 width: 50%;
@@ -197,7 +252,6 @@ body {
 .couverture:hover {
 	opacity:0.7;
 }
-
 
  /*----------------------------------------------------CARROUSSEL--------------------------------------------------------------------*/
 
