--- a/css/style.css
+++ b/css/style.css
@@ -246,6 +246,7 @@ body {
 	 width: 50%;
 	 display: flex;
 	 justify-content: center;
+	 align-items: center;
  }
 .couverture {
 	opacity: 0.8;
@@ -258,6 +259,16 @@ body {
 	opacity:0.7;
 }
 
+
+.category_title {
+	font-family: Poppins;
+	font-size: 40px;
+	font-weight: 500;
+	color: lightgrey;
+	text-decoration: none;
+	position: absolute;
+	background-color: rgba(0, 0, 0, 0.61);
+}
  /*----------------------------------------------------CARROUSSEL--------------------------------------------------------------------*/
 
 /* external css: flickity.css */
@@ -369,7 +380,6 @@ body {
 .social_menu {
 	position: relative;
 	width: 100%;
-	background-color: grey;
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
