--- a/css/style.css
+++ b/css/style.css
@@ -28,9 +28,9 @@ body {
 }
 
 .explication_text {
-	color: #F0F0F0;
-	font-family: Roboto; 
-	font-size: 15px;
+	color: lightgrey;
+	font-family: Poppins; 
+	font-size: 16px;
 	margin-left:5%;
 	margin-right:5%;
 	text-align: justify;
@@ -60,7 +60,7 @@ body {
 }
 
 .row_simple {
-	margin-top: 100px;
+	padding-top: 100px;
 	margin-bottom: 100px;
 	display: flex;
 	flex-direction:row;
