--- a/css/style.css
+++ b/css/style.css
@@ -24,6 +24,9 @@ body {
 	font-size: 16px;
 	margin-left: 20%;
 	margin-right: 20%;
+	margin-top: 0;
+	padding-top: 120px ;
+	margin-bottom: 60px;
 	text-align: center;
 }
 
