--- a/css/style.css
+++ b/css/style.css
@@ -215,7 +215,7 @@ body {
 .scroll_down {
 	width:1.75%;
 	margin: 0;
-	margin-top: 270px;
+	margin-top: 10px;
 	opacity: 0.8;
 }
  /*------------PHOTOMONTAGE--------------*/
@@ -227,6 +227,7 @@ body {
 	flex-direction: column;
 	align-items: center;
 	padding-top: 300px;
+	margin-bottom: 100px;
  }
  .lien_image {
 	 width: 50%;
@@ -321,14 +322,24 @@ body {
 }
 
 /*------------------------------------------------------ RÉSEAUX SOCIAUX -----------------------------------------------*/
+
 .social_menu {
 	position: relative;
 	width: 100%;
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
-	padding-bottom: 20px;
-	padding-top: 20px;
+	padding-bottom: 0px;
+	padding-top: 0px;
+}
+.index {
+	position: relative;
+	width: 100%;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	padding-bottom: 0px;
+	padding-top: 200px;
 }
 .social_menu ul {
     display: flex;
@@ -340,45 +351,23 @@ body {
     margin: 0 10px; /*séparation horizontale entre les boutons*/
 }
 .social_menu ul li .fa {
-    color: #000000; /*couleur des icônes*/
+    color: lightgrey; /*couleur des icônes*/
     font-size: 25px; /*taille des icônes*/
-    line-height: 50px;
     transition: .5s;
 }
 .social_menu ul li .fa:hover {
-    color: #ffffff; /*couleur des icônes lorsqu'elles sont survolées*/
-}
-.social_menu ul li a {
-    position: relative;
-    display: block;
-    width: 50px; /*largeur des rectangles*/
-    height: 50px; /*hauteur des rectangles*/
-    border-radius: 50% ; /*rondeur des angles*/
-    background-color: white; /*couleur des rectangles*/
-    text-align: center;
-    transition: 0.5s; /*temps de la transition/animation*/
-    transform: translate(0,0px);
-    box-shadow: 0px 7px 5px rgba(0, 0, 0, 0.5); /*ombre des cercles*/
+    color: #DE6110; /*couleur des icônes lorsqu'elles sont survolées*/
 }
 .social_menu ul li a:hover {
     transform: rotate(0deg) skew(0deg) translate(0, -10px); /*animation quand les rectangles sont survolés*/
-}
-.social_menu ul li:nth-child(1) a:hover { /*couleur transition LinkedIn*/
-    background-color: #0e76a8;
-}
-.social_menu ul li:nth-child(2) a:hover { /*couleur transition Instagram*/
-    background-color: #e4405f;
-}
-.social_menu ul li:nth-child(3) a:hover { /*couleur transition Youtube*/
-    background-color: #cd201f;
 }
 /*------------------------------------------------------ FOOTER -----------------------------------------------*/
 
 .by {
 	background-color:#0D0D0D;
-	height: 20px;
-	padding-top: 0px;
-	padding-bottom: 40px;
+	width: 100%;
+	padding-top: 20px;
+	margin-bottom: 0px;
 }
 .by_text {
 	margin-top: 10px;
