--- a/css/jeu.css
+++ b/css/jeu.css
@@ -34,3 +34,25 @@
 	margin-left: 15%;
     margin-right: 15%;
 }
+.cadre_sombre_texte {
+    text-align: center;
+    line-height: 70px;
+	color: lightgrey;
+	font-family: Poppins;
+	font-weight: 700;
+    font-size: 20px;
+    margin-bottom: 0;
+    position: absolute;
+    background-color: rgba(0, 0, 0, 0.70);
+    height: 10%;
+    width: 33.5%;
+}
+
+.invisible {
+    display: flex;
+	flex-direction: column;
+    align-items: center;
+    justify-content: flex-end;
+	opacity: 0;
+}
+	
