--- a/css/style.css
+++ b/css/style.css
@@ -39,6 +39,17 @@ body {
 	text-align: justify;
 }
 
+.link_text {
+	background-color: lightgrey;
+	color: #111111;
+	font-family: Poppins; 
+	font-size: 20px;
+	font-weight: 700;
+	margin-left:5%;
+	margin-right:5%;
+	text-align: justify;
+}
+
 .lien {
 	color:#DE6110;
 	text-decoration: underline;
@@ -46,12 +57,15 @@ body {
 /*---------------------------------------- CASES -------------------------------------------------*/
 
 .row_simple {
-	padding-top: 100px;
-	margin-bottom: 100px;
+	margin-top: 0px;
 	display: flex;
 	flex-direction:row;
 	justify-content: center;
 	align-items: center;
+}
+
+#start {
+	padding-top: 100px;
 }
 
 .column_simple {
@@ -70,6 +84,10 @@ body {
 	align-items: center;
 }
 
+.space  {
+	width: 100%;
+	height: 25px;
+}
 .gallerie_image {
 	/*border-radius: 50px;*/
 	width: 80%;
