--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,35 @@ body {
     background-color: darkgrey;
 } 
 
+/*IMPORTATION HTML DANS UN AUTRE FICHIER*/
+.include { /*importation d'un bout d'html*/
+	border:none;
+	width: 100%;
+}
+.fix {
+	position: fixed;
+	z-index: 5;
+}
+/*IMPORTATION HTML DANS UN AUTRE FICHIER FIN*/
+
+
+.ft {
+	background-color: #0d0d0d00;
+	background: none;
+	margin: 0;
+	padding: 0;
+}
+#marker {
+	position: absolute;
+	height: 2px;
+	width: 0px;
+	background: #DE6110;
+	bottom: -4px;
+	transition: 0.3s;
+	border-radius: 0px;
+	z-index: 10;
+}
+
 /*---------------------------------------- TEXTES -----------------------------------------------*/
 .presentation_text{
 	color: lightgrey;
@@ -106,46 +135,6 @@ body {
 	margin-right: 100px;
 }
 
-/*-------------------------------------------------------MENU--------------------------------------------------------------------*/
-.navbar { /*CASE*/
-    width: 100%; /*largeur en pourcentage de la fenêtre du navigateur*/
-    height: 70px;
-    display: flex;
-    flex-direction: column;
-    align-content: center;
-	background-color: #0D0D0D;
-	position: fixed;
-	z-index: 5;
-}
-.navbar ul {
-	padding:0; /*décalage vers la droite*/
-	margin:0; /*décalage vers le bas*/
-	list-style-type:none;
-	position: absolute;
-	align-self: flex-end;
-	margin-top: 20px;
- }
-.navbar li {
-	margin-left:2.5px;
-	margin-right: 2.5px;
-	float:left; /*pour IE*/
- }
-.navbar ul li a {
-	display:block;
-	color: darkgrey; /*#DCDCDC;*/
- 	text-decoration:none;
- 	text-align:center;
- 	font-family: Poppins;
- 	font-size: 20px;
- 	margin-left:30px;
- 	margin-right:30px;
- }
-.navbar ul li a:hover {
- 	color:lightgrey;
- }  
- #page_actuelle {
- 	 color:#DE6110;
- }
  /*------------Prénom-Nom--------------*/
  .haut {
 	display: flex;
@@ -378,18 +367,4 @@ body {
 }
 .social_menu ul li a:hover {
     transform: rotate(0deg) skew(0deg) translate(0, -10px); /*animation quand les rectangles sont survolés*/
-}
-/*------------------------------------------------------ FOOTER -----------------------------------------------*/
-
-.by {
-	background-color:#0D0D0D;
-	width: 100%;
-	padding-top: 20px;
-	margin-bottom: 0px;
-}
-.by_text {
-	margin-top: 10px;
-	font-family: Poppins;
-	text-align: center;
-	color: #DE6110;
 }
