--- a/css/style.css
+++ b/css/style.css
@@ -381,7 +381,9 @@ body {
     transform: rotate(0deg) skew(0deg) translate(0, -10px); /*animation quand les rectangles sont survolés*/
 }
 
-
+html {
+    scroll-behavior: smooth;
+}
 span {
 	border-right: .05em solid;
 	animation: caret 1s steps(1) infinite;
@@ -391,6 +393,118 @@ span {
 	50% {
 	  border-color: transparent;
 	}
+  }
+
+  .move_mouse span {
+    animation: none;
+}
+#presentation a {
+    padding-top: 60px;
+  }
+  #presentation a span {
+    position: absolute;
+    top: 0;
+    left: 50%;
+    width: 30px;
+    height: 50px;
+    margin-left: -15px;
+    border: 1px solid #fff;
+    border-radius: 50px;
+    box-sizing: border-box;
+  }
+  #presentation a span::before {
+    position: absolute;
+    top: 10px;
+    left: 50%;
+    content: '';
+    width: 6px;
+    height: 6px;
+    margin-left: -3px;
+    background-color: #fff;
+    border-radius: 100%;
+    -webkit-animation: sdb10 2s infinite;
+    animation: sdb10 2s infinite;
+    box-sizing: border-box;
+  }
+  @-webkit-keyframes sdb10 { /*animation de la boule de la souris*/
+    0% {
+      -webkit-transform: translate(0, 0);
+      opacity: 0;
+    }
+    40% {
+      opacity: 1;
+    }
+    80% {
+      -webkit-transform: translate(0, 20px);
+      opacity: 0;
+    }
+    100% {
+      opacity: 0;
+    }
+  }
+  @keyframes sdb10 { /*animation de la boule de la souris*/
+    0% {
+      transform: translate(0, 0);
+      opacity: 0;
+    }
+    40% {
+      opacity: 1;
+    }
+    80% {
+      transform: translate(0, 20px);
+      opacity: 0;
+    }
+    100% {
+      opacity: 0;
+    }
+  }  @-webkit-keyframes sdb10 { /*animation de la boule de la souris*/
+    0% {
+      -webkit-transform: translate(0, 0);
+      opacity: 0;
+    }
+    40% {
+      opacity: 1;
+    }
+    80% {
+      -webkit-transform: translate(0, 20px);
+      opacity: 0;
+    }
+    100% {
+      opacity: 0;
+    }
+  }
+  @keyframes sdb10 { /*animation de la boule de la souris*/
+    0% {
+      transform: translate(0, 0);
+      opacity: 0;
+    }
+    40% {
+      opacity: 1;
+    }
+    80% {
+      transform: translate(0, 20px);
+      opacity: 0;
+    }
+    100% {
+      opacity: 0;
+    }
+  }
+  .demo a {
+    position: absolute;
+    bottom: 20px;
+    left: 50%;
+    z-index: 2;
+    display: inline-block;
+    -webkit-transform: translate(0, -50%);
+    transform: translate(0, -50%);
+    color: #fff;
+    font : normal 400 20px/1 'Josefin Sans', sans-serif;
+    letter-spacing: .1em;
+    text-decoration: none;
+    transition: opacity .3s;
+  }
+  .demo a:hover {
+    opacity: 1;
   }
 
 /*----------------------------------------------------------------------------------------------------------------*/
@@ -441,3 +555,19 @@ span {
   background-color: rgba(0, 0, 0, 0.801);
 }
 
+.bouton_remonter {
+	position: fixed;
+	top: 90vh;
+	text-decoration: none;
+	color: lightgrey;
+	background-color: #0D0D0D;
+	border-radius: 50px;
+	width: 50px;
+	height: 50px;
+	display: flex;
+	align-content: center;
+	justify-content: center;
+	font-size: 25px;
+	left: 20px;
+	padding-top: 10px;
+}
