--- a/css/presentation.css
+++ b/css/presentation.css
@@ -1,39 +1,64 @@
 #deuxtiers {
-	width: 50%;
-	display:flex;
-	flex-direction: column;
-	justify-content: center;
-	align-items: center;
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
+
 #tiers {
-	width: 40%;
-	display:flex;
-	flex-direction: column;
-	justify-content: flex-start;
+    width: 40%;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
     align-items: flex-start;
     margin: 0;
 }
+
 .row_simple_present {
     width: 100%;
-	margin-top: 0px;
-	display: flex;
-	flex-direction:row;
-	justify-content: center;
+    margin-top: 0px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
     margin-bottom: 20px;
 }
+
 .explication_text_present {
     color: lightgrey;
-    font-family: Poppins; 
+    font-family: Poppins;
     font-size: 16px;
     margin: 0;
     text-align: justify;
     margin-left: 5%;
 }
-.present_big_present { /*titre présentation*/
-	font-family: Oswald;
-	font-size: 80px;
-	color: darkgrey;
-	font-weight: 700;
-	margin: 0;
-	margin-left: 5%;
+
+.present_big_present {
+    /*titre présentation*/
+    font-family: Oswald;
+    font-size: 80px;
+    color: darkgrey;
+    font-weight: 700;
+    margin: 0;
+    margin-left: 5%;
+}
+
+.btn_download {
+    padding: 13px;
+    border-radius: 50px;
+    background-color: black;
+    color: lightgrey;
+    text-decoration: none;
+    font-family: Poppins;
+    margin: 0;
+    margin-left: 30px;
+    font-weight: 700;
+}
+
+.btn_download:hover {
+    padding: 13px;
+    border-radius: 50px;
+    background-color: lightgrey;
+    color: black;
+    text-decoration: none;
 }
