modif jeu photomontages présentation

--- a/css/photomontage.css
+++ b/css/photomontage.css
@@ -1,3 +1,16 @@
+.photomontage_bande
+/*CASE*/
+
+{
+    display: flex;
+    margin: 0;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    padding-top: 300px;
+    margin-bottom: 100px;
+}
+
 .photomontage_total {
     display: flex;
     flex-direction: column;
@@ -5,39 +18,46 @@
 }
 
 .photomontage_image {
-	opacity: 0.9;
-	margin-top: 20px; 
-	margin-bottom: 20px;
-	display: flex;
+    opacity: 0.9;
+    display: flex;
     justify-content: center;
-
+    width: 100%;
 }
+
 .lien_photomontage {
-    width: 60%;
+    width: 45%;
     display: flex;
     justify-content: center;
     align-items: center;
+    margin: 20px;
 }
+
 .date_photomontage {
-	font-family: Poppins;
-	font-size: 25px;
-	font-weight: 500;
-	color: lightgrey;
-	text-decoration: none;
-	position: absolute;
+    font-family: Poppins;
+    font-size: 20px;
+    font-weight: 500;
+    color: lightgrey;
+    text-decoration: none;
+    position: absolute;
     background-color: rgba(0, 0, 0, 0.61);
     align-self: flex-end;
 }
 
 .lien_projet {
     font-family: Poppins;
-	font-size: 25px;
-	font-weight: 500;
-	color: lightgrey;
-	text-decoration: none;
-	position: absolute;
-    background-color: #DE6110;
+    font-size: 18px;
+    font-weight: 700;
+    color: lightgrey;
+    text-decoration: none;
+    position: absolute;
+    background-color: #000000;
     align-self: flex-start;
     margin-top: 30px;
+    padding: 5px 15px;
     border-radius: 50px;
+}
+
+.lien_projet:hover {
+    color: rgb(0, 0, 0);
+    background-color: lightgrey;
 }
