--- a/css/jeu.css
+++ b/css/jeu.css
@@ -3,56 +3,72 @@
     flex-direction: column;
     align-items: center;
 }
+
 .lien_jeu {
     width: 60%;
     display: flex;
     justify-content: center;
     align-items: center;
 }
+
 .jeu_image {
-	opacity: 0.9;
-	margin-top: 20px; 
-	margin-bottom: 20px;
-	display: flex;
+    opacity: 0.9;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    display: flex;
     justify-content: center;
 }
+
 .date_jeu {
-	font-family: Poppins;
-	font-size: 25px;
-	font-weight: 500;
-	color: lightgrey;
-	text-decoration: none;
-	position: absolute;
+    font-family: Poppins;
+    font-size: 25px;
+    font-weight: 500;
+    color: lightgrey;
+    text-decoration: none;
+    position: absolute;
     background-color: rgba(0, 0, 0, 0.61);
     align-self: flex-end;
 }
-.jeu_ligne_case { /*ligne de trois projets*/
-	display: flex;
+
+.jeu_ligne_case {
+    /*ligne de trois projets*/
+    display: flex;
     justify-content: space-between;
-	margin-bottom: 20px;
-	margin-top: 20px;
-	margin-left: 15%;
-    margin-right: 15%;
+    margin-bottom: 20px;
+    margin-top: 20px;
+    margin-left: 5%;
+    margin-right: 5%;
 }
-.cadre_sombre_texte {
-    text-align: center;
-    line-height: 70px;
-	color: lightgrey;
-	font-family: Poppins;
-	font-weight: 700;
-    font-size: 20px;
-    margin-bottom: 0;
-    position: absolute;
+
+.cadre_sombre {
     background-color: rgba(0, 0, 0, 0.70);
     height: 10%;
-    width: 33.5%;
+    z-index: 5;
+    width: 21.5%;
+    position: absolute;
+}
+
+.cadre_sombre_texte {
+    text-align: center;
+    color: lightgrey;
+    font-family: Poppins;
+    font-weight: 700;
+    font-size: 20px;
+    margin-bottom: 0;
 }
 
 .invisible {
     display: flex;
-	flex-direction: column;
+    flex-direction: column;
     align-items: center;
     justify-content: flex-end;
-	opacity: 0;
+    opacity: 0;
 }
-	
+
+
+/*NANIMO*/
+
+.video_trailer {
+    display: flex;
+    align-self: center;
+}
