--- a/css/presentation.css
+++ b/css/presentation.css
@@ -36,7 +36,18 @@
 .present_big_present {
     /*titre présentation*/
     font-family: Oswald;
-    font-size: 80px;
+    font-size: 60px;
+    color: darkgrey;
+    font-weight: 700;
+    margin: 0;
+    margin-left: 5%;
+    text-decoration: underline;
+}
+
+.present_middle_present {
+    /*titre présentation*/
+    font-family: Oswald;
+    font-size: 40px;
     color: darkgrey;
     font-weight: 700;
     margin: 0;
@@ -61,4 +72,8 @@
     background-color: lightgrey;
     color: black;
     text-decoration: none;
+}
+
+.logo_comp {
+    margin: 10px;
 }
