--- a/css/style.css
+++ b/css/style.css
@@ -108,7 +108,7 @@ html {
     display: flex;
     flex-direction: row;
     justify-content: center;
-    align-items: center;
+    align-items: space-around;
 }
 
 #start {
@@ -119,20 +119,21 @@ html {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
+    align-items: flex-start;
+    height: 100%;
 }
 
 #half {
     width: 50%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
 }
 
 .space {
     width: 100%;
     height: 25px;
+}
+
+.transparent {
+    opacity: 0;
 }
 
 .cadre_present {
@@ -271,19 +272,6 @@ html {
 
 
 /*------------PHOTOMONTAGE--------------*/
-
-.photomontage_bande
-/*CASE*/
-
-{
-    display: flex;
-    margin: 0;
-    justify-content: center;
-    flex-direction: column;
-    align-items: center;
-    padding-top: 300px;
-    margin-bottom: 100px;
-}
 
 .presentation_category
 /*CASE*/
