--- a/css/style.css
+++ b/css/style.css
@@ -127,6 +127,11 @@ html {
     width: 50%;
 }
 
+.column_space {
+    width: 40px;
+    height: 100%;
+}
+
 .space {
     width: 100%;
     height: 25px;
@@ -134,6 +139,12 @@ html {
 
 .transparent {
     opacity: 0;
+}
+
+.left {
+    display: flex;
+    align-self: flex-start;
+    justify-content: flex-start;
 }
 
 .cadre_present {
