--- a/css/presentation.css
+++ b/css/presentation.css
@@ -56,22 +56,22 @@
 
 .btn_download {
     padding: 13px;
-    border-radius: 50px;
-    background-color: black;
-    color: lightgrey;
-    text-decoration: none;
-    font-family: Poppins;
-    margin: 0;
-    margin-left: 30px;
-    font-weight: 700;
-}
-
-.btn_download:hover {
-    padding: 13px;
-    border-radius: 50px;
     background-color: lightgrey;
     color: black;
     text-decoration: none;
+    font-family: Poppins;
+    margin: 0;
+    margin-left: 40px;
+    font-weight: 700;
+    transition: 0.3s;
+}
+
+.btn_download:hover {
+    padding: 10px;
+    background-color: #DE6110;
+    color: lightgrey;
+    margin: 3px;
+    margin-left: 43px;
 }
 
 .logo_comp {
