--- a/css/dut mmi.css
+++ b/css/dut mmi.css
@@ -1,48 +1,65 @@
 .DUT_MMI_case_title {
-	margin-top: 110px;
-	background-color: #F0F0F0;
-	border-radius:20px 0px 0px 20px;
-	margin-bottom: 20px;
-	margin-left: 300px;
-	opacity: 0.9;
+    margin-top: 110px;
+    background-color: #F0F0F0;
+    border-radius: 20px 0px 0px 20px;
+    margin-bottom: 20px;
+    margin-left: 300px;
+    opacity: 0.9;
 }
+
 .DUT_MMI_title {
-	font-family: Montserrat;
-	font-size: 700%;
-	margin: 0;
-	margin-left: 40px;
-	color: #161616;
+    font-family: Montserrat;
+    font-size: 700%;
+    margin: 0;
+    margin-left: 40px;
+    color: #161616;
 }
-.dut_ligne_case { /*ligne de trois projets*/
-	display: flex;
+
+.dut_ligne_case {
+    /*ligne de trois projets*/
+    display: flex;
     justify-content: space-between;
-	margin-bottom: 20px;
-	margin-top: 20px;
-	margin-left: 10px;
+    margin-bottom: 20px;
+    margin-top: 20px;
+    margin-left: 10px;
     margin-right: 10px;
 }
-.dut_projet{ /*case de un projet*/
-	display: flex;
-	flex-direction: column;
+
+.dut_projet {
+    /*case de un projet*/
+    display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: flex-end;
 }
-.dut_projet_image { /*image de la case d'un projet*/
-	width: 95%;
+
+.dut_projet_image {
+    /*image de la case d'un projet*/
+    width: 95%;
+    transition: 0.3s;
 }
-.dut_projet:hover { /*quand on passe par-dessus la case d'un projet, l'image perd en opacité*/
-	opacity:0.85;
+
+.dut_projet_image:hover {
+    /*image de la case d'un projet*/
+    width: 90%;
 }
+
+.dut_projet:hover {
+    /*quand on passe par-dessus la case d'un projet, l'image perd en opacité*/
+    opacity: 0.85;
+}
+
 .presentation_dut_mmi_case {
-	padding-top: 100px;
-	margin-bottom: 100px;
+    padding-top: 100px;
+    margin-bottom: 100px;
 }
+
 .DUT_MMI_image_titre {
     text-align: center;
     line-height: 70px;
-	color: lightgrey;
-	font-family: Poppins;
-	font-weight: 700;
+    color: lightgrey;
+    font-family: Poppins;
+    font-weight: 700;
     font-size: 20px;
     margin-bottom: 0;
     position: absolute;
@@ -50,11 +67,13 @@
     height: 10%;
     width: 31.5%;
 }
+
 .DUT_MMI_image_case {
     display: flex;
     justify-content: center;
     align-items: flex-end;
 }
+
 .couleur_fond {
     position: absolute;
     width: 100%;
