--- a/css/dut mmi.css
+++ b/css/dut mmi.css
@@ -21,8 +21,8 @@
     justify-content: space-between;
     margin-bottom: 20px;
     margin-top: 20px;
-    margin-left: 10px;
-    margin-right: 10px;
+    margin-left: 5%;
+    margin-right: 5%;
 }
 
 .dut_projet {
