--- a/css/photomontage.css
+++ b/css/photomontage.css
@@ -60,7 +60,7 @@
     .lien_projet:hover {
         padding: 5px 15px;
         padding-left: 20px;
-        color: rgb(0, 0, 0);
+        color: lightgrey;
         background-color: #DE6110;
         margin: 5px;
         margin-top: 35px;
