--- a/css/dut mmi.css
+++ b/css/dut mmi.css
@@ -30,7 +30,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: flex-end;
+    justify-content: center;
 }
 
 .dut_projet_image {
