--- a/css/style.css
+++ b/css/style.css
@@ -105,8 +105,8 @@ html {
     margin-top: 0px;
     display: flex;
     flex-direction: row;
-    justify-content: center;
-    align-items: space-around;
+    justify-content: space-around;
+    align-items: flex-start;
     margin-left: 3.5%;
     margin-right: 3.5%;
 }
@@ -124,11 +124,12 @@ html {
 }
 
 #half {
-    width: 50%;
+    max-width: 50%;
+    min-width: 48%;
 }
 
 .column_space {
-    width: 40px;
+    width: 2%;
     height: 100%;
 }
 
@@ -298,7 +299,7 @@ html {
 }
 
 .lien_image {
-    width: 60%;
+    width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
