soulignage des textes importants

--- a/css/style.css
+++ b/css/style.css
@@ -98,6 +98,10 @@ html {
     text-decoration: underline;
 }
 
+b {
+    background-color: #de621088;
+}
+
 
 /*---------------------------------------- CASES -------------------------------------------------*/
 
