--- a/css/style.css
+++ b/css/style.css
@@ -329,20 +329,6 @@ b {
 }
 
 
-/*----------------------------------------------------CARROUSSEL--------------------------------------------------------------------*/
-
-
-/* external css: flickity.css */
-
-* {
-    box-sizing: border-box;
-}
-
-.card {
-    width: 100%;
-}
-
-
 /*------------------------------------------------------- MEDIAS ------------------------------------------------------------------*/
 
 .image {
@@ -656,4 +642,8 @@ span {
 .espace {
     width: 100%;
     height: 100px;
+}
+
+.include_navbar {
+    height: 70px;
 }
